--- a/Module03/InClass/In-Class-Notebook-Matrix-Overview.ipynb
+++ b/Module03/InClass/In-Class-Notebook-Matrix-Overview.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "1046f22f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import the packages here\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import integrate\n",
     "import numpy as np\n",
-    "%matplotlib notebook"
+    "%matplotlib notebook\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -55,11 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "2a79ff35",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.array([[2,4,-7],[3,-3,0],[1,7,5]])\n",
+    "b = np.array(([[2,4],[3,-3],[1,7]]))\n",
+    "c = np.array([[-1,1],[1,-1]])\n",
+    "d = np.array([[-2,0],[-3,6]])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,11 +80,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "df60132e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  5. ,  10. , -17.5],\n",
+       "       [  7.5,  -7.5,   0. ],\n",
+       "       [  2.5,  17.5,  12.5]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2 = a * 2.5\n",
+    "a2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,11 +115,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "a3b0a245",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  9 -53]\n",
+      " [ -3  21]\n",
+      " [ 28  18]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (3,2) and (3,3) not aligned: 2 (dim 1) != 3 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[74], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#does work, rows match columns\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(ab)\n\u001b[0;32m----> 6\u001b[0m ba \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#however, the other way around rows do not match columns.\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (3,2) and (3,3) not aligned: 2 (dim 1) != 3 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "#ca = np.dot(c, a)\n",
+    "#does not work, rows and columns do not match\n",
+    "ab = np.dot(a,b)\n",
+    "#does work, rows match columns\n",
+    "print(ab)\n",
+    "ba = np.dot(b,a)\n",
+    "#however, the other way around rows do not match columns."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,11 +161,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "ef09127a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1  6]\n",
+      " [ 1 -6]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, -2],\n",
+       "       [ 9, -9]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cd = np.dot(c, d)\n",
+    "print(cd)\n",
+    "dc = np.dot(d, c)\n",
+    "dc\n",
+    "#if this is indeed dot product and not multiplication, then yes they will be different answers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,11 +203,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "cc53078b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4]\n",
+      " [ 3 -3]\n",
+      " [ 1  7]]\n",
+      "[[ 2  3  1]\n",
+      " [ 4 -3  7]]\n",
+      "[[14  6 -9]\n",
+      " [ 6 74  7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b)\n",
+    "bt = np.transpose(b)\n",
+    "print(bt)\n",
+    "#now you can dot bt to a since they allign\n",
+    "print(np.dot(bt,a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,11 +239,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "67c6fea8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3,  1],\n",
+       "       [-2,  5]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "caddd = np.add(c,d)\n",
+    "caddd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,11 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "cf9dd452",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1  1]\n",
+      " [ 1 -1]]\n",
+      "0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#manually\n",
+    "print(c)\n",
+    "detcm = (c[0][0] * c[1][1]) - (c[1][0]*c[0][1])\n",
+    "print(detcm)\n",
+    "#numpy\n",
+    "detcn = np.linalg.det(c)\n",
+    "print(detcn)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,11 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "32c185f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-257.9999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using numpy\n",
+    "deta = np.linalg.det(a)\n",
+    "print(deta)"
+   ]
   }
  ],
  "metadata": {
@@ -194,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
