--- a/Module03/InClass/In-Class-Eigenvalue-Eigenvector.ipynb
+++ b/Module03/InClass/In-Class-Eigenvalue-Eigenvector.ipynb
@@ -15,9 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "#import the packages here\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook"
+    "from scipy import integrate\n",
+    "import numpy as np\n",
+    "%matplotlib notebook\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -42,22 +45,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2b05781c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, -1,  0],\n",
+       "       [-1, 12, -1],\n",
+       "       [ 0, -1, 11]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#define matrix"
+    "#define matrix\n",
+    "a = np.array([[11,-1,0],[-1,12,-1],[0,-1,11]])\n",
+    "a\n",
+    "#oh the transpose At = A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c9094862",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: [13. 11. 10.]\n",
+      "Eigenvectors:\n",
+      "[[-4.08248290e-01 -7.07106781e-01  5.77350269e-01]\n",
+      " [ 8.16496581e-01 -1.42827551e-15  5.77350269e-01]\n",
+      " [-4.08248290e-01  7.07106781e-01  5.77350269e-01]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#find eigenvaules and eigenvectors"
+    "#find eigenvaules and eigenvectors\n",
+    "eigenvalues,eigenvectors = np.linalg.eig(a)\n",
+    "print('Eigenvalues: {}'.format(eigenvalues))\n",
+    "print('Eigenvectors:')\n",
+    "print('{}'.format(eigenvectors))\n"
    ]
   }
  ],
@@ -77,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
