--- a/Module04/Lecture/In-Class-Stats-Notebook.ipynb
+++ b/Module04/Lecture/In-Class-Stats-Notebook.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a3e582b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import packages\n",
     "import numpy as np\n",
-    "import scipy.stats as st\n",
+    "from scipy import integrate\n",
+    "from scipy.integrate import odeint\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib notebook"
+    "%matplotlib notebook\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -270,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
