--- a/Module03/Assignment/Assignment-03.ipynb
+++ b/Module03/Assignment/Assignment-03.ipynb
@@ -184,26 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "d76949e0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3,)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,) (100,) ",
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m     v_i \u001b[38;5;241m=\u001b[39m eigenvectors[:, i]\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, )  \u001b[38;5;66;03m# Make it a column vector\u001b[39;00m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28mprint\u001b[39m(v_i\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m---> 19\u001b[0m     positions[i] \u001b[38;5;241m=\u001b[39m (\u001b[43mv_i\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflatten\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcos\u001b[49m\u001b[43m(\u001b[49m\u001b[43momega\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m)\u001b[38;5;241m.\u001b[39mflatten()  \u001b[38;5;66;03m# Use flatten to ensure correct shape\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# Step 7: Plot the results\u001b[39;00m\n\u001b[1;32m     22\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (100,) "
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#eigenvalue 1\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m t \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m100\u001b[39m) \n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#x0 = eigenvectors[0] * np.cos(eigenvalues[0] * t)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#fig = plt.figure('x vs t')\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m#axes = fig.add_axes([0.2,0.2,0.8,0.8])\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#axes.plot(t,x,':g',label=r'$Scipy (RK45)$')\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#axes.set_title('X vs Y');\u001b[39;00m\n\u001b[1;32m     11\u001b[0m omega \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(np\u001b[38;5;241m.\u001b[39mabs(eigenvalues))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -220,15 +213,14 @@
     "\n",
     "omega = np.sqrt(np.abs(eigenvalues))\n",
     "#x1 = A[0,0]*cos(sqrt( w[0]) * t)\n",
-    "positions = np.zeros((3, len(t)))  # 3 masses, time points\n",
+    "positions = np.zeros((3, len(t)))  \n",
     "\n",
     "for i in range(3):\n",
-    "    # Reshape eigenvector for correct broadcasting\n",
-    "    v_i = eigenvectors[:, i].reshape(-1, )  # Make it a column vector\n",
+    "   \n",
+    "    v_i = eigenvectors[:, i].reshape(-1, ) \n",
     "    print(v_i.shape)\n",
-    "    positions[i] = (v_i.flatten() * np.cos(omega[i] * t)).flatten()  # Use flatten to ensure correct shape\n",
+    "    positions[i] = (v_i.flatten() * np.cos(omega[i] * t)).flatten()  \n",
     "\n",
-    "# Step 7: Plot the results\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "for i in range(3):\n",
