--- a/Module05/Assignment/Assignment05.ipynb
+++ b/Module05/Assignment/Assignment05.ipynb
@@ -220,10 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fit 1 results:\n",
+      "\n",
+      " chi2 =  8.706852286902276 \n",
+      " dof =  7 \n",
+      " reduced chi2 =  1.2438360409860394\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fit1_chisq = np.sum( (W - func_exp(t,*popt))**2/(W_error**2) )\n",
+    "dof = len(W) - len(popt)\n",
+    "\n",
+    "print('Fit 1 results:\\n')\n",
+    "print(' chi2 = ',Fit1_chisq,'\\n dof = ', dof, '\\n reduced chi2 = ', Fit1_chisq/dof)"
+   ]
   },
   {
    "cell_type": "markdown",
