--- a/Module05/Assignment/Assignment05.ipynb
+++ b/Module05/Assignment/Assignment05.ipynb
@@ -736,11 +736,11 @@
     "integration_range = (min(Ep), max(Ep))\n",
     "\n",
     "\n",
-    "pion_range = (0.4, 0.8)  # Example range for pions around E/p ~ 0.6\n",
-    "electron_range = (0.9, 1.1)  # Example range for electrons around E/p ~ 1.0\n",
+    "pion_range = (0.4, 0.8)  # example range for pions around E/p ~ 0.6\n",
+    "electron_range = (0.9, 1.1)  # example range for electrons around E/p ~ 1.0\n",
     "\n",
-    "pion_range = (0.3, 0.8)  # Example range for pions around E/p ~ 0.6\n",
-    "electron_range = (0.8, max(Ep))  # Example range for electrons around E/p ~ 1.0\n",
+    "pion_range = (0.3, 0.8)  \n",
+    "electron_range = (0.8, max(Ep))  \n",
     "\n",
     "#pions\n",
     "pi_tot, error_pions = quad(gaussian, *integration_range, args=(params[0], params[1], params[2]))\n",
@@ -756,7 +756,7 @@
     "print(e_range)\n",
     "\n",
     "\n",
-    "print(f\"Estimated number of Pions: {pt_tot} with an error estimate of {error_pions}\")\n",
+    "print(f\"Estimated number of Pions: {pi_tot} with an error estimate of {error_pions}\")\n",
     "print(f\"Estimated number of Electrons: {e_tot} with an error estimate of {error_electrons}\")\n",
     "\n",
     "\n"
